Set up the connector (Finally)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,27 +1,22 @@
 cmake_minimum_required(VERSION 3.10)
-project(airline_api_cpp)
-
+project(airlines_api_cpp)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Add include and source directories
-include_directories(include)
-
 # Find required packages
 find_package(Threads REQUIRED)
+find_package(nlohmann_json REQUIRED)
+find_package(Boost REQUIRED)
 
-# MySQL Connector/C++ (you might need to adjust paths based on your system)
-set(MYSQL_CONNECTOR_DIR ${CMAKE_SOURCE_DIR}/lib/mysql-connector-cpp)
-include_directories(${MYSQL_CONNECTOR_DIR}/include)
-link_directories(${MYSQL_CONNECTOR_DIR}/lib)
+# Crow is header-only, add include path
+include_directories(${CMAKE_SOURCE_DIR}/lib/crow/include)
 
-# Crow is header-only, so we just need to include it
-set(CROW_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/lib/crow/include)
-include_directories(${CROW_INCLUDE_DIR})
+# MariaDB Connector/C++ - Using direct path approach since find_package may not work
+set(MARIADB_CONNECTOR_INCLUDE_DIR "/usr/include/mariadb" "/usr/include/mariadb/conncpp")
+set(MARIADB_CONNECTOR_LIB "mariadbcpp")
 
-# nlohmann/json is also header-only
-set(JSON_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/lib/json/include)
-include_directories(${JSON_INCLUDE_DIR})
+include_directories(${MARIADB_CONNECTOR_INCLUDE_DIR})
+include_directories(include)
 
 # Source files
 file(GLOB_RECURSE SOURCES "src/*.cpp")
@@ -32,8 +27,10 @@ add_executable(airline_api ${SOURCES})
 # Link libraries
 target_link_libraries(airline_api
     Threads::Threads
-    mysqlcppconn
+    ${MARIADB_CONNECTOR_LIB}
+    nlohmann_json::nlohmann_json
+    ${Boost_LIBRARIES}
 )
 
-# Copy configuration files to build directory
-file(COPY ${CMAKE_SOURCE_DIR}/config.json DESTINATION ${CMAKE_BINARY_DIR})
+# Copy configuration files to build directory if needed
+# file(COPY ${CMAKE_SOURCE_DIR}/config.json DESTINATION ${CMAKE_BINARY_DIR})
