--- a/config.json
+++ b/config.json
@@ -2,8 +2,8 @@
   "port": 3000,
   "database": {
     "host": "localhost",
-    "user": "airline_user",
-    "password": "airline_password",
+    "user": "admin",
+    "password": "0506",
     "name": "airline_transportation",
     "port": 3306,
     "poolSize": 10
