--- a/configPreset.json
+++ b/configPreset.json
@@ -1,15 +1,15 @@
-
-// "port": 3000,
-// "database": {
-//     "host": "localhost",
-//     "user": "admin",
-//     "password": "0506",
-// },
-// "name": "airline_transportation",
-// "port": 3306,
-// "poolSize": 10
-// },
-// "jwt": {
-//     "secret": "simpleSecretKey123",
-//     "expiresIn": 2592000
-// }
+{
+  "port": 3000,
+  "database": {
+    "host": "YourHost",
+    "user": "YourDBUser",
+    "password": "YourDBPassword",
+    "name": "YourDBName",
+    "port": 3306,
+    "poolSize": 10
+  },
+  "jwt": {
+    "secret": "simpleSecretKey123",
+    "expiresIn": 2592000
+  }
+}
